update webpack optimization

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 <body>
   <!-- <script src="dist/main.js"></script> -->
   <!-- zz -->
+  <script type="text/javascript" src="axios.min.js"></script>
 </body>
 </html>
